Files: Fix problem with FilesClient. Add simple UserTest.